# lumina-oss

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STACK.md  STATUS.md  eslint.config.js  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
claude_code_commands/: README.md  brainstorm.md  braintrust.md  convergence.md  redact.md  save.md  snapshot.md
claude_code_hooks/: README.md  api_watchdog.py  autoboost.sh  compusec_guard.py  cost_tracker.py  fast_mode_tracker.py  precompact_snapshot.py  secrets_redactor.py  session_compiler.py  settings_template.json  trace_track.py  wakatime_heartbeat.py
config/: 11labs_config.json  README.md  admin_sme_job_slot.json  agent_widgets.json  ai_companion_config.json  ai_ml_scientist_roles_responsibilities.json  ai_post_startup_checklist.json  ai_token_request_tracker.json  armoury_crate_integration.json  armoury_crate_macro_config.json  aws_bedrock_config.json  azure_ad_sso_config.json  azure_openai_config.json  azure_services_config.json  bitcoin_platform_deployment.json  boss_fight_config.json  browser_config.json  character_voice_actor_models.json  claude_desktop_mcp_config.json  cloud_api_blocker.json  compromised_email_sources.json  continue_mcp_config.json  council_policy.json  cursor_agent_modes.json  cursor_footer_config.json  cursor_ide_complete_keyboard_shortcuts.json  cursor_ide_keyboard_shortcuts.json  cursor_ide_retry_config.json  cursor_keybindings_accept_all.json  cursor_recycle_config.json  cursor_ui_auto_hide_config.json  (+140 more)
(+3800 files in other folders)
